fixed h2 table header, began installing cookie parser

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,14 +2,16 @@ extends layout.pug
 
 block content
   table
-    h2: thead
+    thead: h2 Existing Users
       tr
+        th ID
         th First Name
         th Last Name
         th Email
     tbody
       each user in users
         tr
+          td #{user.id}
           td #{user.firstName}
           td #{user.lastName}
           td #{user.email}
