--- a/views/create-user.pug
+++ b/views/create-user.pug
@@ -2,6 +2,12 @@ extends layout.pug
 
 block content
   h2 Create User
+  if errors
+    div
+      ul
+        each error in errors
+          li #{error}
+
   form(method="post" action="/create")
     input(type="hidden" name="_csrf" value="csrfToken")
 
