--- a/views/create-user.pug
+++ b/views/create-user.pug
@@ -4,22 +4,23 @@ block content
   h2 Create User
   if errors
     div
-      ul
+      p The following errors were found:
+        ul
         each error in errors
-          p The following errors were found:
           li #{error}
 
   form(method="post" action="/create")
     input(type="hidden" name="_csrf" value= csrfToken)
+    input(type="hidden" name='id' value= id)
 
     label(for="firstName") First Name
-    input(type="text" id="firstName" name="firstName")
+    input(type="text" id="firstName" name="firstName" value= firstName)
 
     label(for="lastName") Last name
-    input(type="text" id="lastName" name="lastName")
+    input(type="text" id="lastName" name="lastName" value= lastName)
 
     label(for="email") Email
-    input(type="email" id="email" name="email")
+    input(type="email" id="email" name="email" value= email)
 
     label(for="password") Password
     input(type="password" id="password" name="password")
